now able to successfully submit a basic journal entry as a general user

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Welcome to MeloMind</h1>
     <p>This is your mental health support space.</p>
+    <a href="{{ url_for('journal') }}">Go to Journal</a>
 </body>
 </html>
