--- a/static/styles.css
+++ b/static/styles.css
@@ -37,3 +37,14 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.success {
+    color: green;
+}
+.error {
+    color: red;
+}
+.flashes {
+    list-style-type: none;
+    padding: 0;
+}
