--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,17 @@
 <h2>Register</h2>
+
+<!-- Flash messages -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <ul class="flashes">
+      {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
+<!-- Register form -->
 <form method="POST">
     <input name="username" placeholder="Username" required><br>
     <input name="password" type="password" placeholder="Password" required><br>
